fixed issue with calendar on UpcomingAppointments.js

--- a/src/doctor/styles/upcoming_appointments.scss
+++ b/src/doctor/styles/upcoming_appointments.scss
@@ -15,6 +15,15 @@
       border: none;
     }
   }
+  .react-datepicker__navigation--previous{
+    position: absolute!important;
+    top: 2px!important;
+  }
+  .react-datepicker__navigation--next{
+       position: absolute!important;
+    right: 2px!important;
+    top: 2px!important;
+  }
 }
 
 .calender-date-upcoming {
